2005-09-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object): Fix a
	memory leak. Fixes #314019

2005-09-15  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-folder.c (exchange_expunge) : Checks for
	offline mode and returns an error. But uses an existing string for
	gnome-2-12 branch, because of string freeze.
	** Fixes #272987.

2005-09-13  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added 'fa' (Persian) to ALL_LINGUAS.

2005-09-12  Shakti Sen <shprasad@novell.com>

	*addressbook/e-book-backend-exchange.c 
	(http_status_to_pas): Showing the appropriate 
	error message by returning the appropriate status.

	Fixes bug #241499.

2005-09-08  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder) : Reverted the
	changes made for #314573. Now remove the folder from the hash table
	if the folder construction fails, as the inserted is needed for
	processing the notifications (includes new mail) from the mail stub.
	** Fixes #315342.
	
2005-09-06  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" to all_linguas.

2005-09-05  Sarfraaz Ahmed <asarfraaz@novell.com>

	* 2.4.0 tagged !!!
	* NEWS : Updated with the 2.4.0 release info

2005-08-30  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder) : Insert into the
	hash table only when the folder construction succeeds.
	* mail/mail-stub-exchange.c (get_folder_online) : Changed the return
	type to indicate failure.
	(get_folder) : Returns on failure of online code.
	** Fixes #314573.
	
2005-08-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated the version number to 2.4.0

2005-08-28  Praveen Kumar  <kpraveen@novell.com>

	* camel/camel-exchange-provider.c : Reverting the change made in
	revision 1.25 as that fix is broken by some other change in 
	Camel. Adding the hide host mask again.
	
2005-08-27  Sarfraaz Ahmed <asarfraaz@novell.com>
